--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,7 +19,7 @@
         <!-- navigation -->
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">料號翻譯機</a>
+                <a class="navbar-brand" href="/products">料號翻譯機</a>
             </div>
         </nav>
     </header>
