--- a/views/products.hbs
+++ b/views/products.hbs
@@ -21,7 +21,7 @@
         <input class="form-control mx-1 w-25" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success mx-1" type="submit">搜尋</button>
         <a class="btn btn-primary mx-3" href="/new">新增</a>
-        <a class="btn btn-primary" href="/login">登出</a>
+        <a class="btn btn-primary" href="/">登出</a>
     </div>
     <div class="info-container mt-5">
         <table class="table caption-top">
