--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <p class="h1 mt-5 mx-auto text-center" style="width: 300px;">料號翻譯機 註冊頁面</p>
+    <p class="h1 mt-5 mx-auto text-center" style="width: 300px;">註冊頁面</p>
     <form class="register-form w-50 mx-auto mt-5" action="/register" method="POST">
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
