--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,21 +1,27 @@
 <div class="container">
     <p class="h1 mt-5 mx-auto text-center" style="width: 300px;">註冊頁面</p>
-    <form class="register-form w-50 mx-auto mt-5" action="/register" method="POST">
+    {{> message}}
+    <form class="register-form w-50 mx-auto mt-5" action="/users/register" method="POST">
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="請輸入email" required="required">
+            <input type="email" class="form-control" id="email" name="email" placeholder="請輸入email" required="required" value="{{email}}">
         </div>
         <div class="mb-3">
             <label for="username" class="form-label">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="請輸入使用者名稱" required="required">
+            <input type="text" class="form-control" id="username" name="username" placeholder="請輸入使用者名稱" required="required" value="{{username}}">
         </div>
         <div class="mb-3">
             <label for="password" class="form-label">密碼</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="請輸入密碼" required="required">
+            <input type="password" class="form-control" id="password" name="password" placeholder="請輸入密碼" required="required" value="{{password}}">
+        </div>
+        <div class="mb-3">
+            <label for="confirmPassword" class="form-label">確認密碼</label>
+            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="請確認輸入的密碼" required="required" value="{{confirmPassword}}">
         </div>
         <div class="mt-5 btn-container d-flex justify-content-between">
             <button type="submit" class="btn btn-primary">註冊</button>
-            <a href="/" class="btn btn-primary">已有帳號</a>
+            <a href="/auth/facebook" class="btn btn-info" id="register">Facebook登入</a>
+            <a href="/users/login" class="btn btn-primary">已有帳號</a>
         </div>
 
     </form>
