Add Google login method

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -21,6 +21,7 @@
         <div class="mt-5 btn-container d-flex justify-content-between">
             <button type="submit" class="btn btn-primary">註冊</button>
             <a href="/auth/facebook" class="btn btn-info" id="register">Facebook登入</a>
+            <a href="/auth/google" class="btn btn-info" id="register">Google登入</a>
             <a href="/users/login" class="btn btn-primary">已有帳號</a>
         </div>
 
