--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,6 +13,7 @@
         <div class="mt-5 btn-container">
             <button type="submit" class="btn btn-primary" id="login">登入</button>
             <a href="/auth/facebook" class="btn btn-info" id="register">Facebook登入</a>
+            <a href="/auth/google" class="btn btn-info" id="register">Google登入</a>
             <p class="lead mt-4">
                 沒有帳號? <a href="/users/register" class="text-decoration-none">按此註冊</a>
             </p>
